--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');
 @import "tailwindcss";
+
+@theme {
+  --font-geist: "Geist", sans-serif;
+}
+
+p h1 h2 h3 h4 h5 h6 {
+  font-family: "Geist", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
