define font family

--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,7 @@
 @import "tailwindcss";
 
-@font-face {
-    font-family: "Geist";
-    font-style: normal;
-    font-display: swap;
-    font-weight: 200;
-    src: url("@fontsource/geist-sans/files/geist-sans-latin-200-normal.woff2")
-        format("woff2"),
-        url("@fontsource/geist-sans/files/geist-sans-latin-200-normal.woff")
-        format("woff");
-}
-
-:root {
-    --font-geist: "Geist", sans-serif;
+body {
+    font-family: "Geist Sans", sans-serif;
 }
 
 body.overflow-hidden {
